ImageViewer Release Notes
Author: Steve Corbett

Version 2.2 [TODO] - Maintenance release
  #26 - Image set refactoring
  #20 - Cosmetic fix in AboutDialog
  #19 - Image set dirty checking
  #14 - Image sets terminology
  #13 - Image sets persistence
  #12 - Make global keyboard support a bit smarter
  #9 - Image set editor
  #8 - Right click and add to image set
  #7 - Context flipping between file system and image sets
  #6 - Image sets tree
  #2 - Add support for virtual directories (image sets)
  #1 - Upgrade to swing-extras 2.4

Version 2.1 [2025-07-22] - Migrate to github/maven
  Upgrade to swing-extras 2.3
  Migrate project to github/maven

Version 2.0 [2023-12-31] - Ground-up rewrite with extension support
  [IMGVIEW-89] - Add "Undo last move" option
  [IMGVIEW-92] - Crop aspect ratio labels seem wrong
  [IMGVIEW-100] - Two images with same base name confuses thumb panel
  [IMGVIEW-106] - Create ExtensionManager
  [IMGVIEW-107] - Remove TempImagePanel
  [IMGVIEW-108] - Rewrite application preferences
  [IMGVIEW-109] - Name conflict dialog needs to trim the filename
  [IMGVIEW-110] - Add built-in extension for thumbnail caching
  [IMGVIEW-111] - Extension point: menu additions
  [IMGVIEW-112] - Extension point: toolbar buttons
  [IMGVIEW-113] - Extension point: global shortcuts
  [IMGVIEW-114] - Add built-in extension for image information
  [IMGVIEW-115] - Extension point: LogConsole
  [IMGVIEW-116] - Move deletion stats to built-in extension
  [IMGVIEW-117] - Add ImageOperationHandler
  [IMGVIEW-118] - Reload UI if extensions are enabled or disabled
  [IMGVIEW-119] - Extract ResizeDialog to extension
  [IMGVIEW-120] - Extract companion text file to extension
  [IMGVIEW-121] - Extension versioning and deployment
  [IMGVIEW-122] - Extract TransformDialog to extension
  [IMGVIEW-123] - Extract CropDialog/SquareCropDialog into extensions
  [IMGVIEW-124] - Bug: window size doesn't always save
  [IMGVIEW-125] - Extract QuickAccess to an extension